# esp32-s3-smart-bluetooth-camera-car

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
.github/workflows/: app.yml  firmware.yml
.trae/documents/: fix-bottom-tab-no-switch-and-blank-drive.md  fix-settings-button-no-feedback.md
.trae/specs/apply-m3-default-theme-and-ci-gates/: checklist.md  spec.md  tasks.md
.trae/specs/drop-hap-and-bundle-rust-lib/: checklist.md  spec.md  tasks.md
.trae/specs/fix-ci-android-gradle-path/: checklist.md  spec.md  tasks.md
.trae/specs/fix-ci-build-failures/: checklist.md  spec.md  tasks.md
.trae/specs/fix-ci-codegen-dependencies/: checklist.md  spec.md  tasks.md
.trae/specs/fix-ci-flutter-platform/: checklist.md  spec.md  tasks.md
.trae/specs/fix-ci-gradle-kts-extension/: checklist.md  spec.md  tasks.md
.trae/specs/fix-ci-node20-and-clippy-cfg/: checklist.md  spec.md  tasks.md
.trae/specs/fix-ci-rm-sed-compat/: checklist.md  spec.md  tasks.md
.trae/specs/fix-drive-blank-and-add-hap-ci/: checklist.md  spec.md  tasks.md
app/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
app/lib/: main.dart
app/rust/: Cargo.toml  README.md
app/rust/src/: api.rs  ble.rs  control.rs  image.rs  lib.rs  telemetry.rs
firmware/: README.md  partitions.csv  platformio.ini
firmware/src/: ble_task.cpp  ble_task.h  camera_task.cpp  camera_task.h  config.h  crc8.h  main.cpp  motor_task.cpp  motor_task.h  params_store.cpp  params_store.h  protocol.h  speed_sensor.cpp  speed_sensor.h  wifi_config.cpp  wifi_config.h
scripts/: setup-android.ps1  setup-android.sh
(+34 files in other folders)
