[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"
description = "智能蓝牙摄像头小车 Rust 子 crate：承载 BLE 协议解析、JPEG 分片重组、控制指令编码等纯函数逻辑"

[lib]
name = "rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# flutter_rust_bridge 集成；实际版本以 codegen 生成为准（当前 latest 为 2.x）
flutter_rust_bridge = "2.0"
